# mb-ensemble

./: README.md  pyproject.toml
experiments/: experiment1.py  experiment2-singlerun.py  experiment2.py  experiment3.py
model/: dataloader.py  losses.py  model.py
presentation/: mb-ensemble.qmd  perceptron.odg
results/: experiment1-multiple.npy  experiment1-single.npy  experiment1.npy  experiment2-bestrun.npy  experiment2-run1.npy  experiment2-run2.npy  experiment2-run3.npy  experiment2-run4.npy  experiment2-run5.npy  experiment2.csv  experiment3.csv  plots.py
